<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background_image</string>
    <string name="app_logo">app_logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_a_league">Find a team in your city and dominate a league</string>
    <string name="get_started">GET STARTED</string>
    <string name="go_all_in">Go ALL IN</string>
    <string name="textview">TextView</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Loooking for a co-ed beginner league near you...</string>
</resources>
