<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brian.swoosh.Controller.SkillActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beginnerballerbg"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/skill_app_logo"
        android:layout_width="119dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo" />

    <TextView
        android:id="@+id/skill_i_am_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/textview"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_app_logo"
        tools:text="I am a:" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_i_am_text">

        <ToggleButton
            android:id="@+id/beginnerSkillBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onBeginnerClick"
            android:text="@string/beginner"
            android:textColor="@android:color/white"
            android:textOff="@string/beginner"
            android:textOn="@string/beginner"
            tools:text="BEGINNER" />

        <ToggleButton
            android:id="@+id/ballerSkillBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onBallerClick"
            android:text="@string/baller"
            android:textColor="@android:color/white"
            android:textOff="@string/baller"
            android:textOn="@string/baller"
            tools:text="BALLER" />
    </LinearLayout>

    <Button
        android:id="@+id/finishSkillBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/swoosh_button"
        android:fontFamily="@font/montserrat"
        android:onClick="onSkillFinishClicked"
        android:text="@string/finish"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="FINISH" />

</android.support.constraint.ConstraintLayout>
